# plc

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  rust.yml
app/: Cargo.toml
compiler/: Cargo.toml
compiler/app/: Cargo.toml
compiler/app/src/: main.rs
compiler/lib/: Cargo.toml
compiler/lib/src/: common.rs  err.rs  lib.rs  parser.rs
compiler/lib/src/builder/: mod.rs
compiler/lib/src/parser/: mod.rs  terms.rs  util.rs
compiler/lib/src/translator/: asm.rs  consts.rs  mod.rs  stdlib.rs  util.rs
e2e/: Cargo.toml
e2e/src/: lib.rs  util.rs
examples/: 0-basics.plc  1-calculator.plc  5-binding.plc  boolean-logic.plc  dup-drop-take.plc  fac-bindings.plc  fac-lists.plc  if.plc  lists-inf-cycle.plc  lists.plc  simple_calculator.plc
lib/: Cargo.toml
lib/src/: common.rs  parser.rs
lib/src/parser/: mod.rs  terms.rs
lib/src/translator/: consts.rs  mod.rs  stdlib.rs  util.rs
llvm/: install-llvm.sh
src/: Cargo.toml  main.rs
src/app/: Cargo.toml
src/compiling/: compile_error.rs  mod.rs
src/lib/: Cargo.toml
src/parsing/: mod.rs
