[package]
name = "plc"
version = "1.0.0"
edition = "2021"
authors = [
    "Vyacheslav Zalygin @vzalygin"
]
description = "postfix language compiler"

[package.metadata.deb]
maintainer = "Vycheslav Zalygin <vya.zalygin@gmail.com>"
copyright = "2024, Vyacheslav Zalygin <vya.zalygin@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A compiler for turing complete postfix stack language."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/plc", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/plc/README", "644"],
]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
anyhow = "1.0"
lib = { path = "../lib" }
